--- a/css/main.less
+++ b/css/main.less
@@ -18,7 +18,7 @@
 	margin-top: @big-space;
 }
 .aldo-ct-container{
-	font-family: "Trade Gothic LT Narrow" !important;
+	font-family: "Trade Gothic LT Narrow" , arial, sans-serif  !important;
 	width: @container-width;
 	text-align: center;
 	-background-color: #ff0066;
@@ -50,7 +50,7 @@
 .aldo-ct-ul{
 	width: 600px;
 	margin: 0 auto;
-	margin-top:@small-space;
+	-margin-top:@small-space;
 }
 
 .aldo-ct-h1{
@@ -58,7 +58,7 @@
 	text-transform: uppercase;
 	padding: 0;
 	margin: 0;
-	font-family: "Trade Gothic Bold" !important;
+	font-family: "Trade Gothic Bold" , arial, sans-serif !important;
 	margin-top: @small-space !important;
 
 }
@@ -79,16 +79,23 @@
 	-padding: 2px ;
 }
 
+.aldo-ct-bold{
+	font-family: "Trade Gothic Bold" , arial, sans-serif !important ;
+}
+
+.aldo-ct-small{
+	font-size: 11px !important;
+}
 /* reskin of offerpop*/
 body, div, span, a, button {
-	font-family:"Trade Gothic LT Narrow"  !important;
+	font-family:"Trade Gothic LT Narrow"  , arial, sans-serif !important;
 }
 
 div.SDescription h1 {
 	font-size: 25px  ;
 	margin-bottom: 0px ;
 	font-weight: normal ;
-	font-family: "Trade Gothic Bold" !important ;
+	font-family: "Trade Gothic Bold" , arial, sans-serif !important ;
 }
 
 a.CButton {
@@ -137,7 +144,7 @@ div.CAction{
 }
 
 div.CNav{
-	font-family: 'Trade Gothic Bold', tahoma, verdana, arial, sans-serif  !important;
+	font-family: 'Trade Gothic Bold', arial, sans-serif  !important;
 	border-bottom: 1px solid #000000 ;
 	font-size: @text-font-size ;
 	padding: 7px 0px 3px 0px ;
