font changed and button skined

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url("http://www.aldoshoes.com/css/fonts.css");
+@import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
 .small-space-m-top {
   margin-top: 20px;
 }
@@ -6,7 +6,8 @@
   margin-top: 40px;
 }
 .aldo-ct-container {
-  font-family: "Trade Gothic LT Narrow", arial, sans-serif !important;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 300;
   width: 790px;
   text-align: center;
   -background-color: #ff0066;
@@ -35,11 +36,12 @@
   -margin-top: 20px;
 }
 .aldo-ct-h1 {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
   font-size: 25px !important;
   text-transform: uppercase;
   padding: 0;
   margin: 0;
-  font-family: "Trade Gothic Bold", arial, sans-serif !important;
   margin-top: 20px !important;
 }
 .aldo-ct-hr {
@@ -56,7 +58,8 @@
   -padding: 2px ;
 }
 .aldo-ct-bold {
-  font-family: "Trade Gothic Bold", arial, sans-serif !important;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
 }
 .aldo-ct-small {
   font-size: 11px !important;
@@ -67,16 +70,19 @@ div,
 span,
 a,
 button {
-  font-family: "Trade Gothic LT Narrow", arial, sans-serif !important;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 300;
 }
 div.SDescription h1 {
   font-size: 25px  ;
   margin-bottom: 0px ;
   font-weight: normal ;
-  font-family: "Trade Gothic Bold", arial, sans-serif !important;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
 }
 a.CButton {
-  font-family: "Trade Gothic LT Narrow";
+  font-family: 'Oswald', sans-serif;
+  font-weight: 300;
   color: #000000 ;
   -webkit-border-radius: 0px ;
   -moz-border-radius: 0px ;
@@ -114,12 +120,14 @@ div.CAction {
   text-align: center ;
 }
 div.CNav {
-  font-family: 'Trade Gothic Bold', arial, sans-serif !important;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
   border-bottom: 1px solid #000000 ;
   font-size: 16px;
   padding: 7px 0px 3px 0px ;
   text-transform: uppercase ;
   text-align: center ;
+  margin-top: 25px !important;
 }
 div.CNav a:hover {
   background: #000000  !important;
@@ -128,19 +136,21 @@ div.CNav a:hover {
   color: white !important;
 }
 div.CNav a {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
   color: #9d9b9b ;
   background: none !important;
   padding: 6px 10px 4px 10px ;
   border: 0 ;
   text-decoration: none ;
-  font-weight: normal ;
   border: 0px solid #000000 ;
   font-size: 14px;
 }
 div.CNav a.RightMenu {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
   float: none ;
   background: none !important ;
-  font-weight: bold ;
   margin: -8px 0px 0 0;
   border: 0px solid #000000 ;
 }
@@ -164,4 +174,42 @@ div.CNav a.Sel {
 
   border-bottom: 0;
   padding-bottom: 5px;
+}
+div.VButton a,
+div.SSubmit button,
+div.SSubmit input[type=button] {
+  color: none !important;
+  background: #fff100 !important;
+  color: #020202 !important;
+  text-transform: uppercase !important;
+  padding: 10px 15px 7px 37px !important;
+  font-size: 18px !important;
+  border: 4px solid #000000 !important;
+  -moz-border-radius: 0px !important;
+  background-image: url("http://www.aldoshoes.com/etc/content/2013/03/14b/theme/callSmallblack.png") !important;
+  background-repeat: no-repeat !important;
+  background-position: 6px 7px !important;
+  -webkit-border-radius: 0px !important;
+  text-decoration: none !important;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
+}
+div.VButton a:hover,
+div.SSubmit button:hover,
+div.SSubmit input[type=button]:hover {
+  color: none !important;
+  background: #fff100 !important;
+  color: #020202 !important;
+  text-transform: uppercase !important;
+  padding: 10px 15px 7px 37px !important;
+  font-size: 18px !important;
+  border: 4px solid #000000 !important;
+  -moz-border-radius: 0px !important;
+  background-image: url("http://www.aldoshoes.com/etc/content/2013/03/14b/theme/callSmallWhite.png") !important;
+  background-repeat: no-repeat !important;
+  background-position: 6px 7px !important;
+  -webkit-border-radius: 0px !important;
+  text-decoration: none !important;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
 }
