--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
+.aldo-ct-rules {
+  font-size: 11px !important;
+  width: 1010px !important;
+  margin: 0 auto !important;
+}
 .small-space-m-top {
   margin-top: 20px;
 }
@@ -72,6 +77,7 @@ a,
 button {
   font-family: 'Oswald', sans-serif;
   font-weight: 300;
+  line-height: 22px;
 }
 div.SDescription h1 {
   font-size: 25px  ;
@@ -182,13 +188,13 @@ div.SSubmit input[type=button] {
   background: #fff100 !important;
   color: #020202 !important;
   text-transform: uppercase !important;
-  padding: 10px 15px 7px 37px !important;
+  padding: 7px 11px 7px 40px !important;
   font-size: 18px !important;
   border: 4px solid #000000 !important;
   -moz-border-radius: 0px !important;
   background-image: url("http://www.aldoshoes.com/etc/content/2013/03/14b/theme/callSmallblack.png") !important;
   background-repeat: no-repeat !important;
-  background-position: 6px 7px !important;
+  background-position: 8px 8px !important;
   -webkit-border-radius: 0px !important;
   text-decoration: none !important;
   font-family: 'Oswald', sans-serif;
@@ -201,15 +207,19 @@ div.SSubmit input[type=button]:hover {
   background: #fff100 !important;
   color: #020202 !important;
   text-transform: uppercase !important;
-  padding: 10px 15px 7px 37px !important;
+  padding: 7px 11px 7px 40px !important;
   font-size: 18px !important;
   border: 4px solid #000000 !important;
   -moz-border-radius: 0px !important;
   background-image: url("http://www.aldoshoes.com/etc/content/2013/03/14b/theme/callSmallWhite.png") !important;
   background-repeat: no-repeat !important;
-  background-position: 6px 7px !important;
+  background-position: 8px 8px !important;
   -webkit-border-radius: 0px !important;
   text-decoration: none !important;
   font-family: 'Oswald', sans-serif;
   font-weight: 700;
+}
+div#CVoteCountBox {
+  font-size: 24px;
+  margin-bottom: 27px !important;
 }
