--- a/css/main.less
+++ b/css/main.less
@@ -6,6 +6,7 @@
 @p-width:500px;
 @h1-font-size:25px;
 @text-font-size:16px;
+@line-height: 22px;
 @small-text-font-size:14px;
 @big-space:40px;
 @small-space:20px;
@@ -17,14 +18,22 @@
 @font-weight-normal: 400 !important;
 @font-weight-bold: 700 !important;
 
+.aldo-ct-rules{
+	font-size: 11px !important;
+	width: 1010px !important;
+	margin: 0 auto !important;
+}
+
 
 .small-space-m-top{
 	margin-top: @small-space;
 }
 
+
 .big-space-m-top{
 	margin-top: @big-space;
 }
+
 .aldo-ct-container{
 	font-family: @font-familly;
 	font-weight: @font-weight-book;
@@ -102,6 +111,7 @@
 body, div, span, a, button {
 	font-family: @font-familly;
 	font-weight: @font-weight-book;
+	line-height: @line-height;
 }
 
 div.SDescription h1 {
@@ -230,18 +240,18 @@ div.VButton a ,div.SSubmit button, div.SSubmit input[type=button] {
   background: #fff100 !important;
   color: #020202 !important;
   text-transform: uppercase !important;
-  padding: 10px 15px 7px 37px !important;
+  padding: 7px 11px 7px 40px !important;
   font-size: 18px !important;
   border: 4px solid #000000 !important;
   -moz-border-radius: 0px !important;
   background-image: url("http://www.aldoshoes.com/etc/content/2013/03/14b/theme/callSmallblack.png") !important;
   background-repeat: no-repeat !important;
-  background-position: 6px 7px !important;
+  background-position: 8px 8px !important;
   -webkit-border-radius: 0px !important;
   text-decoration: none !important;
  
 
- font-family: @font-familly;
+ 	font-family: @font-familly;
 	font-weight: @font-weight-bold;
 }
 
@@ -251,17 +261,25 @@ div.VButton a:hover,div.SSubmit button:hover, div.SSubmit input[type=button]:hov
   background: #fff100 !important;
   color: #020202 !important;
   text-transform: uppercase !important;
-  padding: 10px 15px 7px 37px !important;
+  padding: 7px 11px 7px 40px !important;
   font-size: 18px !important;
   border: 4px solid #000000 !important;
   -moz-border-radius: 0px !important;
   background-image: url("http://www.aldoshoes.com/etc/content/2013/03/14b/theme/callSmallWhite.png") !important;
   background-repeat: no-repeat !important;
-  background-position: 6px 7px !important;
+  background-position: 8px 8px !important;
   -webkit-border-radius: 0px !important;
   text-decoration: none !important;
- font-family: @font-familly;
+ 
+
+ 	font-family: @font-familly;
 	font-weight: @font-weight-bold;
 }
+
+div#CVoteCountBox {
+	font-size: 24px;
+	margin-bottom: 27px !important;
+}
+
 
 
