--- a/css/main.less
+++ b/css/main.less
@@ -281,5 +281,9 @@ div#CVoteCountBox {
 	margin-bottom: 27px !important;
 }
 
+.gallery-photo-info-background {
+	background: none !important;
+}
+
 
 
